<resources>
    <string name="app_name">app-administra-turmas-v1</string>
    <string name="btLogin">LOGIN</string>
    <string name="etUsuario">Usuario</string>
    <string name="etSenha">Senha</string>
    <string name="tvCadastro">CADASTRO</string>
    <string name="etNome">Nome</string>
    <string name="etSenha2">Confirmação de senha</string>
    <string name="btnCadastrar">CADASTRAR</string>
    <string name="btnTurmas">TURMAS</string>
    <string name="btnProfessores">PROFESSORES</string>
    <string name="btnAlunos">ALUNOS</string>
    <string name="btnLogOut">LOGOUT</string>
    <string name="tvVazio">VAZIO</string>
    <string name="etTurma">Nome turma</string>
    <string name="etProfessor">Nome professor</string>
    <string name="etSala">Qual sala</string>
</resources>
