<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/books"
    tools:context=".CadastroTurmas">

    <EditText
        android:id="@+id/etNomeTurma"
        android:layout_width="346dp"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="@string/etTurma"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etProfessor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />

    <EditText
        android:id="@+id/etProfessor"
        android:layout_width="346dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/etProfessor"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etSala"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <EditText
        android:id="@+id/etSala"
        android:layout_width="341dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/etSala"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarTurma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <TextView
        android:id="@+id/tvCadastro"
        android:layout_width="291dp"
        android:layout_height="80dp"
        android:text="@string/tvCadastro"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/etNomeTurma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCadastrarTurma"
        android:layout_width="164dp"
        android:layout_height="63dp"
        android:text="@string/btnCadastrar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

</androidx.constraintlayout.widget.ConstraintLayout>